welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:7: error: Unit does not take parameters
faireV()
      ^