welcome.lessons.welcome.methods.picture.PictureMono.scala.code
def faireV{
	avance()
	leveBrosse()
	baisseBrosse()
	gauche()
}
faireV()
